# pikaqiu-task

./: .gitignore  CLAUDE.md  cyberpet_prd.docx  package.json  pnpm-lock.yaml
.claude/: PROJECT.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: character.rs  image.rs  llm.rs  mod.rs  providers.rs  video.rs  window.rs
src/assets/animations/: encourage.json  idle.json  rest.json  thinking.json
src/components/character/: CharacterGallery.tsx  CharacterWizard.tsx  ChromaKeyTuner.tsx  CostEstimator.tsx  DefaultCharacterThumb.tsx  (+3 more)
src/data/: reminderPhrases.ts
src/hooks/: useLLM.ts  useTaskDecompose.ts  useTaskTimer.ts
src/prompts/: characterPrompt.ts  chatRouter.ts  skillCreatorPrompt.ts  skillPrompt.ts  taskDecompose.ts  taskExtract.ts  taskModify.ts
src/services/: character.ts  characterGenerator.ts  conflictDetector.ts  customReminder.ts  db.ts  imageQuota.ts  reminder.ts  review.ts  scheduler.ts  skillParser.ts  skillRegistry.ts  taskAlarm.ts  taskParser.ts
src/stores/: useCharacterDraftStore.ts  useCharacterStore.ts  useChatSessionStore.ts  useChatStore.ts  usePetStore.ts  usePresetStore.ts  useReminderStore.ts  useSettingsStore.ts  useSkillStore.ts  useTaskStore.ts
src/styles/: animations.css  fonts.css  globals.css  tokens.css
src/types/: bubble.ts  character.ts  chat.ts  pet.ts  preset.ts  reminder.ts  settings.ts  skill.ts  task.ts
src/windows/: CharacterStudio.tsx  ChatPanel.tsx  PetWindow.tsx  SettingsPanel.tsx  TaskPanel.tsx
(+57 files in other folders)
