[package]
name = "cyberpet"
version = "0.1.0"
description = "赛博桌宠 CyberPet - AI 任务规划桌面智能伴侣"
authors = ["chch"]
edition = "2021"

[lib]
name = "cyberpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
jsonwebtoken = "9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
